# puppies-api

./: Dockerfile  README.md  architecture.mmd  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: posts.py  users.py
app/core/: config.py
app/domain/feed/: models.py
app/domain/interactions/: models.py
app/domain/posts/: models.py
app/domain/users/: models.py
app/schemas/: post.py  user.py
docs/: submission.html  submission.md
terraform/: main.tf  provider.tf
terraform/modules/cloudsql/: main.tf
terraform/modules/gke/: main.tf
terraform/modules/memorystore/: main.tf
terraform/modules/vpc/: main.tf
